<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.form.PageOneUserData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/m_todo_heart_carter_1_3"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TableRow android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlEstatura"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="188dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:hint="@string/estatura_em_extens_o_m_xima" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlMassaCoporal"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="161dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="161dp"
                        android:hint="@string/massa_corporal" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlDataNascimento"
                style="@style/TextInputLayoutStyle"
                android:layout_width="348dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="348dp"
                    android:hint="@string/data_de_nascimento" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlSexo"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/sexo" />

            </com.google.android.material.textfield.TextInputLayout>
            -->
            <RadioGroup
                android:id="@+id/sexoRadioButton"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="167dp"
                    android:layout_height="match_parent"
                    android:text="@string/masculino" />

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="165dp"
                    android:layout_height="match_parent"
                    android:text="@string/feminino" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:textSize="8pt"
                android:textAlignment="center"
                android:focusableInTouchMode="false"
                android:text="@string/comorbidades">
            </TextView>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <CheckBox
                    android:layout_width="173dp"
                    android:id="@+id/diabetes"
                    android:layout_height="match_parent"
                    android:text="@string/comorbidade_diab_tes_i_ou_ii" />
                <CheckBox
                    android:layout_width="173dp"
                    android:id="@+id/obesidade"
                    android:layout_height="match_parent"
                    android:text="@string/obesidade" />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="match_parent">
                <CheckBox
                    android:layout_width="173dp"
                    android:id="@+id/hipertensao"
                    android:layout_height="match_parent"
                    android:text="@string/hipertens_o" />
                <CheckBox
                    android:layout_width="171dp"
                    android:id="@+id/cardiopatia"
                    android:layout_height="match_parent"
                    android:text="@string/cardiopatia" />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="match_parent">
                <CheckBox
                    android:layout_width="173dp"
                    android:id="@+id/colesterolemia"
                    android:layout_height="match_parent"
                    android:text="Colesterolemia" />
                <CheckBox
                    android:layout_width="171dp"
                    android:id="@+id/dislipidemia"
                    android:layout_height="match_parent"
                        android:text="Dislipidemia" />
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:textSize="8pt"
                android:textAlignment="center"
                android:focusableInTouchMode="false"
                android:text="@string/covid">
            </TextView>

            <RadioGroup
                android:id="@+id/covidRadioButton"
                android:checkedButton="@+id/covidRadioButton_2"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/covidRadioButton_1"
                    android:layout_width="176dp"

                    android:layout_height="match_parent"
                    android:text="@string/sim" />

                <RadioButton
                    android:id="@+id/covidRadioButton_2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/n_o" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:textSize="8pt"
                android:textAlignment="center"
                android:focusableInTouchMode="false"
                android:text="Cirurgia">
            </TextView>

            <RadioGroup
                android:id="@+id/cirurgiaButton"
                android:checkedButton="@+id/cirurgiaButton_2"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/cirurgiaButton_1"
                    android:layout_width="176dp"

                    android:layout_height="match_parent"
                    android:text="@string/sim" />

                <RadioButton
                    android:id="@+id/cirurgiaButton_2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/n_o" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/prx_page" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>